Refactor PortalScene component to remove AR.js dependency and implement WebXR support
- Removed AR.js related types and code from PortalScene.tsx, including marker tracking setup and AR toolkit source/context management.
- Introduced WebXR session management for immersive AR experiences, including hit testing and reticle placement.
- Updated rendering logic to accommodate WebXR, ensuring proper rendering loop and session handling.
- Enhanced visual elements such as fireflies and portal materials for improved aesthetics.
- Cleaned up Vite configuration by removing unnecessary aliases and dependencies related to AR.js.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ar-js-org/ar.js": "^3.4.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
@@ -22,6 +21,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/three": "^0.181.0",
+    "@types/webxr": "^0.5.24",
     "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
